--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue-joint-editor</title>
+    <script src="/joi/js/jquery/js/jquery-2.2.4.min.js"></script>
+    <script src="/joi/js/jquery/js/jquery-ui.min.js"></script>
   </head>
   <body>
     <noscript>
